# Sql_Query_AI_Agent

client/src/: App.jsx
python_ai/: .env  app.py  frontend.py  pyproject.toml  sql_agent.py
